# hash-sig-agg

./: Cargo.toml  README.md  bench.sh  render_table.py
.github/workflows/: ci-circuit.yaml  ci-zkvm-openvm.yaml  ci-zkvm-sp1.yaml  ci.yaml
circuit/: Cargo.toml  README.md  bench.sh  render_table.py
circuit/examples/: hash-sig-agg.rs
circuit/openvm/: Cargo.toml
circuit/openvm/examples/: hash-sig-agg.rs
circuit/openvm/src/poseidon2/: chip.rs  hash_sig.rs
circuit/openvm/src/poseidon2/chip/chain/: generation.rs
circuit/openvm/src/poseidon2/chip/decomposition/: air.rs
circuit/openvm/src/poseidon2/chip/merkle_tree/: air.rs  column.rs  generation.rs
circuit/p3-poseidon2-util/src/instantiation/horizon/baby_bear/: constant.rs
circuit/p3-poseidon2-util/src/instantiation/horizon/koala_bear/: constant.rs
circuit/src/gadget/: cycle_bits.rs  cycle_int.rs  is_equal.rs  is_zero.rs  lower_rows_filter.rs  mod.rs  strictly_increasing.rs  test_utils.rs
circuit/src/poseidon2/: hash_sig.rs  mod.rs
circuit/src/poseidon2/chip/: mod.rs
circuit/src/poseidon2/chip/chain/: air.rs  mod.rs
circuit/src/poseidon2/chip/decomposition/: air.rs  column.rs  generation.rs  mod.rs
circuit/src/poseidon2/chip/main/: air.rs  generation.rs
circuit/src/poseidon2/chip/merkle_tree/: air.rs  column.rs  generation.rs  mod.rs
circuit/src/poseidon2/chip/range_check/: air.rs
circuit/src/util/: chip.rs  engine.rs
circuit/src/util/engine/: keccak.rs  mod.rs  poseidon2.rs
circuit/src/util/engine/multilinear/: keccak.rs
circuit/src/util/engine/univariate/: mod.rs
crates/hash-sig-agg/: Cargo.toml
crates/hash-sig-agg/examples/: hash-sig-agg.rs
crates/hash-sig-agg/examples/engine/: mod.rs
crates/hash-sig-agg/examples/engine/multilinear/: keccak.rs  mod.rs
crates/hash-sig-agg/examples/engine/univariate/: keccak.rs  mod.rs  poseidon2.rs
crates/hash-sig-agg/src/: lib.rs
crates/hash-sig-agg/src/air/: mod.rs
crates/hash-sig-agg/src/air/chain/: air.rs  column.rs  generation.rs  mod.rs
crates/hash-sig-agg/src/air/decomposition/: air.rs  column.rs  generation.rs  mod.rs
crates/hash-sig-agg/src/air/main/: air.rs  column.rs  generation.rs  mod.rs
crates/hash-sig-agg/src/air/merkle_tree/: air.rs  column.rs  generation.rs  mod.rs
crates/hash-sig-agg/src/air/range_check/: air.rs  generation.rs  mod.rs
crates/hash-sig-agg/src/gadget/: cycle_bits.rs  cycle_int.rs  lower_rows_filter.rs  mod.rs  strictly_increasing.rs  test_utils.rs
crates/hash-sig-agg/src/hash_sig/: mod.rs  param.rs
crates/hash-sig-agg/src/poseidon2/chip/: mod.rs
crates/hash-sig-agg/src/poseidon2/chip/chain/: air.rs  column.rs  generation.rs
crates/hash-sig-agg/src/poseidon2/chip/decomposition/: air.rs  column.rs  generation.rs
crates/hash-sig-agg/src/poseidon2/chip/main/: air.rs  mod.rs
crates/hash-sig-agg/src/poseidon2/chip/merkle_tree/: air.rs
crates/hash-sig-agg/src/poseidon2/chip/range_check/: air.rs  generation.rs  mod.rs
crates/hash-sig-agg/src/util/: air_instance.rs  field.rs  mod.rs
crates/hash-sig-agg/src/util/engine/multilinear/: keccak.rs  mod.rs
crates/hash-sig-agg/src/util/engine/univariate/: keccak.rs  mod.rs  poseidon2.rs
crates/hash-sig-testdata/: Cargo.toml
crates/hash-sig-testdata/src/: lib.rs
crates/hash-sig-verifier/: Cargo.toml
crates/hash-sig-verifier/src/: instantiation.rs
crates/hash-sig-verifier/src/instantiation/: poseidon2.rs
crates/hash-sig-verifier/src/instantiation/poseidon2/: baby_bear_horizon.rs  koala_bear_horizon.rs
hash-sig/: Cargo.toml
hash-sig/hash-sig-testdata/: Cargo.toml
hash-sig/hash-sig-testdata/src/: lib.rs
hash-sig/hash-sig-verifier/: Cargo.toml
hash-sig/hash-sig-verifier/src/: instantiation.rs
hash-sig/hash-sig-verifier/src/instantiation/: poseidon2.rs  sha3.rs
hash-sig/hash-sig-verifier/src/instantiation/poseidon2/: baby_bear_horizon.rs  koala_bear_horizon.rs
hash-sig/p3-poseidon2-util/: Cargo.toml
hash-sig/src/instantiation/: poseidon2.rs  sha3.rs
p3-poseidon2-util/: Cargo.toml
p3-poseidon2-util/src/: lib.rs
zkvm/openvm/: Cargo.toml
zkvm/openvm/keccak256/src/: main.rs
zkvm/openvm/poseidon2/src/: main.rs
zkvm/openvm/script/src/: main.rs
zkvm/sp1/: Cargo.toml
zkvm/sp1/script/src/: main.rs
