[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
bincode = "1.3.3"
clap = { version = "4.5.30", features = ["derive"] }
hashsig = { git = "https://github.com/han0110/hash-sig", branch = "feature/alt-tweak-encoding" }
itertools = "0.14.0"
num-bigint = "0.4.6"
rand = "0.9.0"
rayon = "1.10.0"
serde = { version = "1", default-features = false }
serde-big-array = "0.5.1"
sha3 = "0.10.8"
tracing-forest = { version = "0.1.6", features = ["smallvec"] }
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }

p3-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3.git", features = ["parallel"] }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-sha256 = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git" }
tracing = "0.1.41"

p3-air-ext = { git = "https://github.com/han0110/p3-playground.git", rev = "7426bf0" }
p3-fri-ext = { git = "https://github.com/han0110/p3-playground.git", rev = "7426bf0" }
p3-hyperplonk = { git = "https://github.com/han0110/p3-playground.git", rev = "7426bf0" }
p3-ml-pcs = { git = "https://github.com/han0110/p3-playground.git", rev = "7426bf0" }
p3-poseidon2-util = { git = "https://github.com/han0110/p3-playground.git", rev = "7426bf0" }
p3-uni-stark-ext = { git = "https://github.com/han0110/p3-playground.git", rev = "7426bf0" }
p3-whir = { git = "https://github.com/han0110/p3-playground.git", rev = "7426bf0" }

hash-sig-agg = { path = "crates/hash-sig-agg" }
hash-sig-testdata = { path = "crates/hash-sig-testdata" }
hash-sig-verifier = { path = "crates/hash-sig-verifier" }

[profile.ci]
inherits = "release"

debug-assertions = true

[profile.bench]
inherits = "release"

codegen-units = 1
lto = "fat"

[patch."https://github.com/Plonky3/Plonky3"]
p3-air = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-baby-bear = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-blake3 = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
# p3-blake3-air = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
# p3-bn254-fr = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-challenger = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
# p3-circle = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-commit = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-dft = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
# p3-examples = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-field = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
# p3-field-testing = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
# p3-fri = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-goldilocks = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-interpolation = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-keccak = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
# p3-keccak-air = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-koala-bear = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-matrix = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-maybe-rayon = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-mds = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-merkle-tree = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
# p3-mersenne-31 = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-monty-31 = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
# p3-poseidon = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-poseidon2 = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-poseidon2-air = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
# p3-rescue = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
# p3-sha256 = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-symmetric = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
# p3-uni-stark = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-util = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

cast_possible_truncation = "allow"
cast_precision_loss = "allow"
debug_assert_with_mut_call = "allow"
default_trait_access = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
