[package]
name = "hash-sig-agg-circuit-openvm"

edition = "2024"
version = "0.1.0"

[dependencies]
itertools = "0.14.0"
p3-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-fri-ext = { git = "https://github.com/han0110/p3-playground.git" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3.git", features = ["parallel"] }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-sha256 = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-uni-stark-ext = { git = "https://github.com/han0110/p3-playground.git" }
tracing = "0.1.41"

hash-sig-verifier = { path = "../hash-sig/hash-sig-verifier" }
p3-poseidon2-util = { path = "../hash-sig/p3-poseidon2-util", features = ["air"] }

[dev-dependencies]
bincode = "1.3.3"
clap = { version = "4.5.30", features = ["derive"] }
tracing-forest = { version = "0.1.6", features = ["smallvec"] }
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }

hash-sig-testdata = { path = "../hash-sig/hash-sig-testdata" }

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
tikv-jemallocator = "0.6"

[features]
check-constraints = ["p3-uni-stark-ext/check-constraints"]

[profile.ci]
inherits = "release"

debug-assertions = true

[profile.bench]
inherits = "release"

codegen-units = 1
lto = "fat"

[lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

cast_possible_truncation = "allow"
cast_precision_loss = "allow"
debug_assert_with_mut_call = "allow"
default_trait_access = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
