[workspace]
members = ["hash-sig-verifier", "hash-sig-testdata", "p3-poseidon2-util"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
bincode = "1.3.3"
hashsig = { git = "https://github.com/han0110/hash-sig", branch = "feature/alt-tweak-encoding" }
num-bigint = "0.4.6"
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "e46b416" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "e46b416" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "e46b416" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "e46b416" }
p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "e46b416" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "e46b416" }
rand = "0.9.0"
rand-0-8-5 = { version = "0.8.5", package = "rand" }
rayon = "1.10.0"
serde = "1"
serde-big-array = "0.5.1"
sha3 = "0.10.8"
zkhash = { git = "https://github.com/HorizenLabs/poseidon2", branch = "main", package = "zkhash" }

hash-sig-testdata = { path = "hash-sig-testdata" }
hash-sig-verifier = { path = "hash-sig-verifier" }
p3-poseidon2-util = { path = "p3-poseidon2-util" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

cast_possible_truncation = "allow"
cast_precision_loss = "allow"
debug_assert_with_mut_call = "allow"
default_trait_access = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
unreadable_literal = "allow"
