[package]
name = "hash-sig-verifier"

edition.workspace = true
version.workspace = true

[dependencies]
num-bigint.workspace = true
p3-baby-bear.workspace = true
p3-field.workspace = true
p3-koala-bear.workspace = true
p3-poseidon2.workspace = true
p3-poseidon2-util.workspace = true
p3-symmetric.workspace = true
rand.workspace = true
serde.workspace = true
serde-big-array.workspace = true
sha3.workspace = true

[dev-dependencies]
hashsig.workspace = true
rand-0-8-5 = { version = "0.8.5", package = "rand" }

[lints]
workspace = true
